--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -10,6 +11,7 @@
 <body>
     <div class="content">
             <img src="Imagenes/logo.png" alt="logo">
+            <h2>Hola, Hola</h2>
             <ul class="navigation">
             <li><a href=""> Home</a></li>
             <li><a href=""> About Me</a></li>
